# arango-entity-resolution

./: .cursorrules  .env.example  .gitignore  ALL_TESTS_FIXED.md  AUDIT_CHECKLIST.md  AUDIT_QUICK_SUMMARY.md  CHANGELOG.md  CODE_AUDIT_REPORT.md  CODE_COVERAGE_AUDIT.md  CODE_QUALITY_AUDIT_REPORT.md  CODE_QUALITY_CLEANUP_SUMMARY.md  CODE_QUALITY_IMPROVEMENTS.md  CODE_QUALITY_IMPROVEMENTS_SUMMARY.md  CODE_REVIEW_AND_TEST_COVERAGE_REPORT.md  COVERAGE_IMPROVEMENTS_SUMMARY.md  COVERAGE_INCREASE_REPORT.md  COVERAGE_SUMMARY.txt  DEMO_IMPLEMENTATION_COMPLETE.md  DEMO_PLAN.md  DEMO_QUICK_START.md  DOCUMENTATION_AUDIT.md  DOCUMENTATION_CLEANUP_SUMMARY.md  DOCUMENTATION_INDEX.md  E2E_TEST_RESULTS.md  FINAL_COVERAGE_SESSION_REPORT.md  FINAL_SYSTEM_VERIFICATION_REPORT.md  FOXX_ARCHIVE_SUMMARY.md  FOXX_DEPLOYMENT_INSTRUCTIONS.md  FOXX_DEPLOYMENT_STATUS.md  FUTURE_DEVELOPMENT_RECOMMENDATIONS_IMPLEMENTED.md  GIT_HOOKS_SUMMARY.md  GOLDEN_RECORD_COVERAGE_REPORT.md  HIGH_PRIORITY_RISKS_RESOLVED.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  LIB_USER_UPDATE_EXAMPLES.md  LIB_USER_UPDATE_GUIDE.md  LICENSE  Makefile  PERFORMANCE_IMPROVEMENTS_SUMMARY.md  (+28 more)
.githooks/: pre-commit  pre-push
config/: er_config.example.yaml  test-database.md  vector_search_setup.md
demo/: DEMO_SETUP_GUIDE.md  PRESENTATION_SCRIPT.md  README.md  README_PRESENTATION_DEMO.md  launch_presentation_demo.py
docs/: API_REFERENCE.md  AVAILABLE_DATASETS.md  BATCH_VS_BULK_PROCESSING.md  CLAUDE.md  CUSTOM_COLLECTIONS_GUIDE.md  DESIGN.md  DIAGRAM_GENERATION_GUIDE.md  DOCKER_TESTING_SETUP.md  E2E_TEST_STATUS.md  FOXX_ARCHITECTURE.md  FOXX_DEPLOYMENT.md  GIT_HOOKS.md  NEO4J_MOVIE_DATASET_CLARIFICATION.md  PRD.md  PROJECT_EVOLUTION.md  README.md  TESTING.md  TESTING_GUIDE.md  TESTING_SETUP.md  TEST_COVERAGE_SUMMARY.md  enrichments.md  openapi.yaml
examples/: bulk_processing_demo.py  clustering_backend_comparison.py  complete_entity_resolution_demo.py  cross_collection_matching_examples.py  enhanced_er_examples.py  incremental_resolution.py  multi_strategy_orchestration.py  (+9 more)
tests/: conftest.py  (+100 more)
(+376 files in other folders)
